src/components/App/App.css
.app-container {
  --app-height: 250vh;
  --base: #e3f4fc;

  --darkest-back: #00578f;
  --darker-back: #3ab2ff;
  --dark-back: #5cbfff;
  --med-link: #8fd3ff;
  --med-hover: #b1e0ff;

  --btn-invert-color: #b5e2f7;
  --btn-invert-hover-color: #87d6f2;

  --bg-gradient: linear-gradient(
    to top,
    #b1e0ff 0%,
    #5cbeff 12%,
    #18a3ff 57%,
    #007fd3 80%,
    #0061a0 91%,
    #004c7e 100%
  );

  position: relative;
  width: 100%;
  height: var(--app-height);
  background-color: var(--darkest-back);
}

.app {
  border: var(--darkest-back) solid 0.5em;
  text-align: center;
  width: 80%;
  position: absolute;
  left: 10%;
  border-radius: 10%;
  background-color: var(--darker-back);
  height: var(--app-height);
  filter: drop-shadow(0px 50px 40px var(--dark-back))
    drop-shadow(0px -50px 40px var(--dark-back));
  margin: 0;
  overflow-x: hidden;
}

.fade-in {
  animation: fadeIn ease-out 0.5s;
}

.fade-out {
  animation: fadeOut ease 1s;
}

.bg {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
  /* width: 99%; */
  background-image: var(--bg-gradient);
  height: 300vh;
  /* height: 91.5vh; */
}
.font-bd {
  font-family: "BabyDoll";
}

.logo {
  position: absolute;
  width: 50%;
  left: 25%;
  right: 25%;
  top: 25%;
  bottom: 25%;
}

.mtb-landing-container {
  width: 100%;

  position: relative;
  height: fit-content;
  border-top-left-radius: 10%;
  border-top-right-radius: 50%;
}
.mtb-landing-image {
  width: 200%;
  position: relative;
  right: 100%;
  margin: 0;
}

.svg-btn {
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
}
.custom-btn-container {
  position: relative;
  width: 200px;
}
.link {
  position: absolute;
  left: calc(0.5% + 0%);
  top: 8px;
  width: 80%;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

